Bug 252475 - nsLocale is broken on Mac OS X. r=jshin,sr=blizzard